# cmake_template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  config.toml  tasks.py
cmake/: CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  StaticAnalyzers.cmake
cmake/lib/: CompilerWarnings.cmake  Harden.cmake  Linker.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
src/ftxui_sample/: main.cpp
src/lib/: arithmetic.cxxm  convert.cxxm  std_imports.cxxm
src/lib/arithmetic/: add.cxx  mul.cxx
src/test/: arithmetic.cpp  convert.cpp
